<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/finishRegistText"
        android:layout_width="333dp"
        android:layout_height="107dp"
        android:layout_marginTop="300dp"
        android:fontFamily="@font/comfortaa_bold"
        android:gravity="center"
        android:text="@string/finishRegist"
        android:textSize="30dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registPassOne"
        app:layout_constraintVertical_bias="0.226" />

    <Button
        android:id="@+id/vtnOk"
        android:layout_width="116dp"
        android:layout_height="62dp"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/comfortaa_bold"
        android:onClick="getExitRegist"
        android:text="@string/ok"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/finishRegistText"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/emailIcon"
        android:layout_width="177dp"
        android:layout_height="153dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="160dp"
        android:animateLayoutChanges="true"
        android:src="@drawable/baseline_attach_email_24"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/finishRegistText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/registPassOne"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/edit_text_style"
        android:drawableLeft="@drawable/baseline_lock_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/comfortaa_bold"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registEmail" />

    <EditText
        android:id="@+id/registPassTwo"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/edit_text_style"
        android:drawableLeft="@drawable/baseline_lock_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/comfortaa_bold"
        android:hint="@string/passRepeat"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registPassOne" />

    <EditText
        android:id="@+id/registName"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/edit_text_style"
        android:drawableLeft="@drawable/baseline_account_circle_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/comfortaa_bold"
        android:hint="@string/registName"
        android:inputType="text"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labale" />

    <EditText
        android:id="@+id/registEmail"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/edit_text_style"
        android:drawableLeft="@drawable/baseline_alternate_email_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/comfortaa_bold"
        android:hint="@string/name"
        android:inputType="text"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registName" />

    <TextView
        android:id="@+id/labale"
        android:layout_width="341dp"
        android:layout_height="88dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/appWelcome"
        android:textSize="18pt"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btRegist"
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="44dp"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/comfortaa_bold"
        android:onClick="onClickSave"
        android:text="@string/accCreated"
        android:textSize="19sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>