<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/usrName"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/edit_text_style"
        android:drawableLeft="@drawable/baseline_alternate_email_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/comfortaa_bold"
        android:hint="@string/name"
        android:inputType="text"
        android:paddingLeft="20dp"
        android:paddingRight="30dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailIcon" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/edit_text_style"
        android:drawableLeft="@drawable/baseline_lock_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/comfortaa_bold"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usrName" />

    <Button
        android:id="@+id/btLogin"
        android:layout_width="207dp"
        android:layout_height="57dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="72dp"
        android:background="@drawable/button_transparent_background"
        android:fontFamily="@font/comfortaa_bold"
        android:onClick="onClickSiginUp"
        android:text="@string/btnUp"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btRegist"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btRegist"
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="120dp"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/comfortaa_bold"
        android:onClick="onClickSiginIn"
        android:text="@string/btnIn"
        android:textSize="19sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/emailIcon"
        android:layout_width="177dp"
        android:layout_height="153dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="92dp"
        android:animateLayoutChanges="true"
        android:src="@drawable/baseline_account_circle_24"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>